fix: kurangi g-4 jadi g-3, gap-4 jadi gap-3, kurangi background biru dari width 94vw jadi 93vw

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav .register-button {
     margin-left: 0;
     left: 7%;
     height: 118.81px;
-    width: 94vw;
+    width: 93vw;
   }
 
   .mercedes-car {
